# libpak

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  readme.md
include/: test.hpp
include/libpak/: algorithms.hpp  definitions.hpp  libpak.hpp  util.hpp
src/libpak/: algorithms.cpp  libpak.cpp
src/test/: libpak_test.cpp
